change index html

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="article-container">
               <img
                 src="./Assets/event.webp"
-                alt="Project 2"
+                alt="Project"
                 class="project-img"
               />
             </div>
