--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <img
-        src="./Assets/arrow (2).png"
+        src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -203,7 +203,7 @@
          efficient systems. I bring a unique blend of creativity and technical proficiency to my work,
          ensuring that each project is not only functional but also visually appealing and user-friendly.</P>
       <img
-        src="./Assets/arrow (2).png"
+        src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -276,7 +276,7 @@
         </div>
       </div>
       <img
-        src="./Assets/arrow (2).png"
+        src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -288,7 +288,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./Assets/mark_email_read_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png"
+            src="./Assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
