--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./Assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/anvitnaik/'"
           />
           <img
-            src="./assets/github.png"
+            src="./Assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href=''"
@@ -86,7 +86,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="./Assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -95,7 +95,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="./Assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -114,7 +114,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -130,7 +130,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -141,7 +141,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -152,7 +152,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 /> 
@@ -168,7 +168,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -183,7 +183,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="./Assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -203,7 +203,7 @@
          efficient systems. I bring a unique blend of creativity and technical proficiency to my work,
          ensuring that each project is not only functional but also visually appealing and user-friendly.</P>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -276,7 +276,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="./Assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -296,7 +296,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./Assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
